Fix deprecated code so that all runs in Java11+ cleanly