@@ -61,8 +61,8 @@ public class JGeometrySpatialHelperTest extends JDOPersistenceTestCase
             return;
         }
 
-        Integer dim2 = new Integer(2);
-        Integer dim3 = new Integer(3);
+        Integer dim2 = Integer.valueOf(2);
+        Integer dim3 = Integer.valueOf(3);
         assertEquals(dim2, helper.getDimensionFromJdoMetadata(org.datanucleus.samples.jgeometry.SampleGeometry.class, "geom"));
         assertEquals(dim3, helper.getDimensionFromJdoMetadata(org.datanucleus.samples.jgeometry.SampleGeometry3D.class, "geom"));
     }
@@ -74,7 +74,7 @@ public class JGeometrySpatialHelperTest extends JDOPersistenceTestCase
             return;
         }
 
-        Integer srid = new Integer(4326);
+        Integer srid = Integer.valueOf(4326);
         assertEquals(srid, helper.getSridFromJdoMetadata(org.datanucleus.samples.jgeometry.SampleGeometry.class, "geom"));
     }
 }
