@@ -70,7 +70,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "POINT(10 10)";
-            Short srid = new Short((short) 4326);
+            Short srid = Short.valueOf((short) 4326);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.equals(Spatial.geomFromText(:wkt, :srid))");
             List list = (List) query.execute(wkt, srid);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -90,7 +90,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "POINT(75 75)";
-            Short srid = new Short((short) 4326);
+            Short srid = Short.valueOf((short) 4326);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.equals(Spatial.pointFromText(:wkt, :srid))");
             List list = (List) query.execute(wkt, srid);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -110,7 +110,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "LINESTRING(50 0, 50 100)";
-            Short srid = new Short((short) 4326);
+            Short srid = Short.valueOf((short) 4326);
             Query query = pm.newQuery(SampleLineString.class, "geom != null && geom.equals(Spatial.lineFromText(:wkt, :srid))");
             List list = (List) query.execute(wkt, srid);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -130,7 +130,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "POLYGON((75 75,100 75,100 100,75 75))";
-            Short srid = new Short((short) 4326);
+            Short srid = Short.valueOf((short) 4326);
             Query query = pm.newQuery(SamplePolygon.class, "geom != null && geom.equals(Spatial.polyFromText(:wkt, :srid))");
             List list = (List) query.execute(wkt, srid);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -150,8 +150,8 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "MULTIPOINT(10 10,75 75)";
-            Short srid = new Short((short) 4326);
-            Short n = new Short((short) 1);
+            Short srid = Short.valueOf((short) 4326);
+            Short n = Short.valueOf((short) 1);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.mPointFromText(:wkt, :srid), :n))");
             List list = (List) query.execute(wkt, srid, n);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -171,8 +171,8 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "MULTILINESTRING((0 50,100 50),(50 0,50 100),(100 25,120 25,110 10,110 45))";
-            Short srid = new Short((short) 4326);
-            Short n = new Short((short) 3);
+            Short srid = Short.valueOf((short) 4326);
+            Short n = Short.valueOf((short) 3);
             Query query = pm.newQuery(SampleLineString.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.mLineFromText(:wkt, :srid), :n))");
             List list = (List) query.execute(wkt, srid, n);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -192,8 +192,8 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "MULTIPOLYGON(((25 25,75 25,75 75,25 75,25 25),(45 45,55 45,55 55,45 55,45 45)),((75 75,100 75,100 100,75 75)))";
-            Short srid = new Short((short) 4326);
-            Short n = new Short((short) 2);
+            Short srid = Short.valueOf((short) 4326);
+            Short n = Short.valueOf((short) 2);
             Query query = pm.newQuery(SamplePolygon.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.mPolyFromText(:wkt, :srid), :n))");
             List list = (List) query.execute(wkt, srid, n);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -213,8 +213,8 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             String wkt = "GEOMETRYCOLLECTION(POINT(10 10),LINESTRING(0 50, 100 50),POLYGON((25 25,75 25,75 75,25 75,25 25),(45 45,55 45,55 55,45 55,45 45)))";
-            Short srid = new Short((short) 4326);
-            Short n = new Short((short) 1);
+            Short srid = Short.valueOf((short) 4326);
+            Short n = Short.valueOf((short) 1);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.geomCollFromText(:wkt, :srid), :n))");
             List list = (List) query.execute(wkt, srid, n);
             assertEquals("Wrong number of geometries with a given wkt returned", 1, list.size());
@@ -310,7 +310,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             MultiPoint geom = (MultiPoint) wktReader.read("MULTIPOINT(10 10,75 75)");
-            Short n = new Short((short) 1);
+            Short n = Short.valueOf((short) 1);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.mPointFromWKB(Spatial.asBinary(:geom), :geom.getSRID()), :n))");
             List list = (List) query.execute(geom, n);
             assertEquals("Wrong number of geometries with a given wkb returned", 1, list.size());
@@ -330,7 +330,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             MultiLineString geom = new MultiLineString("SRID=4326;MULTILINESTRING((0 50,100 50),(50 0,50 100),(100 25,120 25,110 10,110 45))");
-            Short n = new Short((short) 3);
+            Short n = Short.valueOf((short) 3);
             Query query = pm.newQuery(SampleLineString.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.mLineFromWKB(Spatial.asBinary(:geom), Spatial.srid(:geom)), :n))");
             List list = (List) query.execute(geom, n);
             assertEquals("Wrong number of geometries with a given wkb returned", 1, list.size());
@@ -350,7 +350,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             MultiPolygon geom = (MultiPolygon) wktReader.read("MULTIPOLYGON(((25 25,75 25,75 75,25 75,25 25),(45 45,55 45,55 55,45 55,45 45)),((75 75,100 75,100 100,75 75)))");
-            Short n = new Short((short) 2);
+            Short n = Short.valueOf((short) 2);
             Query query = pm.newQuery(SamplePolygon.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.mPolyFromWKB(Spatial.asBinary(:geom), Spatial.srid(:geom)), :n))");
             List list = (List) query.execute(geom, n);
             assertEquals("Wrong number of geometries with a given wkb returned", 1, list.size());
@@ -370,7 +370,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             GeometryCollection geom = (GeometryCollection) wktReader.read("GEOMETRYCOLLECTION(POINT(10 10),LINESTRING(0 50, 100 50),POLYGON((25 25,75 25,75 75,25 75,25 25),(45 45,55 45,55 55,45 55,45 45)))");
-            Short n = new Short((short) 1);
+            Short n = Short.valueOf((short) 1);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.equals(Spatial.geometryN(Spatial.geomCollFromWKB(Spatial.asBinary(:geom), Spatial.srid(:geom)), :n))");
             List list = (List) query.execute(geom, n);
             assertEquals("Wrong number of geometries with a given wkb returned", 1, list.size());
@@ -389,7 +389,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Integer dim = new Integer(1);
+            Integer dim = Integer.valueOf(1);
             Query query = pm.newQuery(SampleLineString.class, "geom != null && geom.getDimension() == :dim");
             List list = (List) query.execute(dim);
             assertEquals("Wrong number of geometries with dimension " + dim + " returned", 3, list.size());
@@ -401,7 +401,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getDimension()");
             query.setResultClass(Integer.class);
             query.setUnique(true);
-            Integer dim_read = (Integer) query.execute(new Long(getSampleLineString(2).getId()));
+            Integer dim_read = (Integer) query.execute(Long.valueOf(getSampleLineString(2).getId()));
             assertEquals("Dimension of LineString 2 should be equal to a given dimension", dim, dim_read);
         }
         finally
@@ -428,7 +428,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getGeometryType()");
             query.setResultClass(String.class);
             query.setUnique(true);
-            String type_read = (String) query.execute(new Long(getSamplePoint(1).getId()));
+            String type_read = (String) query.execute(Long.valueOf(getSamplePoint(1).getId()));
             assertEquals("Geometry type of Point 1 should be equal to a given geometry type", type, type_read);
         }
         finally
@@ -444,7 +444,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Integer srid = new Integer(4326); // WGS84
+            Integer srid = Integer.valueOf(4326); // WGS84
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.getSRID() == :srid");
             List list = (List) query.execute(srid);
             assertEquals("Wrong number of geometries with srid " + srid + " returned", 2, list.size());
@@ -455,7 +455,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getSRID()");
             query.setResultClass(Integer.class);
             query.setUnique(true);
-            Integer srid_read = (Integer) query.execute(new Long(getSamplePoint(2).getId()));
+            Integer srid_read = (Integer) query.execute(Long.valueOf(getSamplePoint(2).getId()));
             assertEquals("SRID of Point 2 should be equal to a given SRID", srid, srid_read);
         }
         finally
@@ -479,7 +479,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             
             query = pm.newQuery(SampleLineString.class, "id == :id");
             query.setResult("geom.getEnvelope()");
-            list = (List) query.execute(new Long(getSampleLineString(3).getId()));
+            list = (List) query.execute(Long.valueOf(getSampleLineString(3).getId()));
             assertEquals("Wrong number of geometries with a given id returned", 1, list.size());
             Geometry envelope_read = (Geometry) list.get(0);
             envelope.normalize();
@@ -509,7 +509,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePoint.class, "id == :id");
             query.setResultClass(String.class);
             query.setResult("geom.toText()");
-            list = (List) query.execute(new Long(point1.getId()));
+            list = (List) query.execute(Long.valueOf(point1.getId()));
             assertEquals("Wrong number of geometries with a given id returned", 1, list.size());
             String wkt_read = (String)list.get(0);
             assertEquals("WKT of Point 1 should be equal to a given point's wkt", wkt, wkt_read);
@@ -588,7 +588,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.isSimple()");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean isSimple = (Boolean) query.execute(new Long(getSampleLineString(2).getId()));
+            Boolean isSimple = (Boolean) query.execute(Long.valueOf(getSampleLineString(2).getId()));
             assertEquals("LineString 2 is simple", true, isSimple.booleanValue());
         }
         finally
@@ -614,7 +614,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePolygon.class, "id == :id");
             query.setResult("geom.getBoundary()");
             query.setUnique(true);
-            Geometry boundary_read = (Geometry) query.execute(new Long(getSamplePolygon(2).getId()));
+            Geometry boundary_read = (Geometry) query.execute(Long.valueOf(getSamplePolygon(2).getId()));
             boundary.normalize();
             boundary_read.normalize();
             assertTrue("Boundary of Polygon 2 should be equal to a given boundary", boundary_read.equalsExact(boundary)); 
@@ -643,7 +643,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.equals(Spatial.geomFromText('POLYGON((25 25,75 25,75 75,25 75,25 25),(45 45,55 45,55 55,45 55,45 45))', 4326))");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Polygon 1 should be equal to the given polygon", true, equals.booleanValue());
         }
         finally
@@ -670,7 +670,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.disjoint(Spatial.geomFromText('POLYGON((10 10,40 10,40 40,10 40,10 10))', 4326))");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(2).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(2).getId()));
             assertEquals("Polygon 2 should be disjoint from the given polygon", true, equals.booleanValue());
         }
         finally
@@ -697,7 +697,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.intersects(Spatial.geomFromText('POLYGON((10 10,40 10,40 40,10 40,10 10))', 4326))");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Polygon 1 should intersect the given polygon", true, equals.booleanValue());
         }
         finally
@@ -726,7 +726,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("Spatial.touches(Spatial.geomFromText('POINT(75 75)', 4326), geom)");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Polygon 1 should be touched by the given point", true, equals.booleanValue());
         }
         finally
@@ -755,7 +755,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("Spatial.crosses(Spatial.geomFromText('LINESTRING(25 25,25 75)', 4326), geom)");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSampleLineString(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSampleLineString(1).getId()));
             assertEquals("LineString 1 should be crossed by the given linestring", true, equals.booleanValue());
         }
         finally
@@ -781,7 +781,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("Spatial.within(Spatial.geomFromText('POINT(30 30)', 4326), geom)");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Given point should be in Polygon 1", true, equals.booleanValue());
         }
         finally
@@ -807,7 +807,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.contains(Spatial.geomFromText('POINT(30 30)', 4326))");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Polygon 1 should contain the given point", true, equals.booleanValue());
         }
         finally
@@ -833,7 +833,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.overlaps(Spatial.geomFromText('POLYGON((10 10,50 10,50 50,10 50,10 10))', 4326))");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Polygon 1 should overlap the given polygon", true, equals.booleanValue());
         }
         finally
@@ -862,7 +862,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.relate(Spatial.geomFromText('LINESTRING(25 25,25 75)', 4326), 'T*T******')");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSampleLineString(1).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSampleLineString(1).getId()));
             assertEquals("LineString 1 should be crossed by the given linestring (relate mask T*T******)", true, equals.booleanValue());
         }
         finally
@@ -879,7 +879,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             Point point = (Point) wktReader.read("POINT(0 10)");
-            Double distance = new Double(10.0);
+            Double distance = Double.valueOf(10.0);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.distance(:point) == :distance");
             List list = (List) query.execute(point, distance);
             assertEquals("Wrong number of geometries with a distance of " + distance + " to a given point returned", 1, list.size());
@@ -890,7 +890,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.distance(Spatial.geomFromText('POINT(0 10)', 4326))");
             query.setResultClass(Double.class);
             query.setUnique(true);
-            Double distance_read = (Double) query.execute(new Long(getSamplePoint(1).getId()));
+            Double distance_read = (Double) query.execute(Long.valueOf(getSamplePoint(1).getId()));
             assertEquals("Point 1 should be in the given distance from the given point", distance, distance_read);
         }
         finally
@@ -917,7 +917,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePoint.class, "id == :id");
             query.setResult("geom.buffer(20)");
             query.setUnique(true);
-            Geometry buffer = (Geometry) query.execute(new Long(getSamplePoint(1).getId()));
+            Geometry buffer = (Geometry) query.execute(Long.valueOf(getSamplePoint(1).getId()));
             assertEquals("Returned buffer should be a polygon", "POLYGON", buffer.getGeometryType().toUpperCase());
             assertEquals("Returned buffer should have the given srid", 4326, buffer.getSRID());
             assertTrue("Given point should be within the returned buffer", point.within(buffer));
@@ -945,7 +945,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SampleLineString.class, "id == :id");
             query.setResult("geom.convexHull()");
             query.setUnique(true);
-            Geometry convexHull_read = (Geometry) query.execute(new Long(getSampleLineString(3).getId()));
+            Geometry convexHull_read = (Geometry) query.execute(Long.valueOf(getSampleLineString(3).getId()));
             convexHull.normalize();
             convexHull_read.normalize();
             assertTrue("Returned convex hull should be equal to the given polygon", convexHull_read.equalsExact(convexHull));
@@ -975,7 +975,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SampleLineString.class, "id == :id");
             query.setResult("geom.intersection(Spatial.geomFromText('LINESTRING(25 25, 25 75)', 4326))");
             query.setUnique(true);
-            Geometry intersection_read = (Geometry) query.execute(new Long(getSampleLineString(1).getId()));
+            Geometry intersection_read = (Geometry) query.execute(Long.valueOf(getSampleLineString(1).getId()));
             assertTrue("Returned intersection should be equal to the given point", intersection_read.equalsExact(intersection));
         }
         finally
@@ -1004,7 +1004,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePoint.class, "id == :id");
             query.setResult("geom.union(Spatial.geomFromText('POINT(50 50)', 4326))");
             query.setUnique(true);
-            Geometry union_read = (Geometry) query.execute(new Long(getSamplePoint(1).getId()));
+            Geometry union_read = (Geometry) query.execute(Long.valueOf(getSamplePoint(1).getId()));
             union.normalize();
             union_read.normalize();
             assertTrue("Returned union should be equal to the given multipoint", union_read.equalsExact(union));
@@ -1037,7 +1037,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePolygon.class, "id == :id");
             query.setResult("geom.symDifference(Spatial.geomFromText('POLYGON((75 75, 125 75, 125 100, 75 100, 75 75))', 4326))");
             query.setUnique(true);
-            Geometry symDifference_read = (Geometry) query.execute(new Long(getSamplePolygon(2).getId()));
+            Geometry symDifference_read = (Geometry) query.execute(Long.valueOf(getSamplePolygon(2).getId()));
             symDifference.normalize();
             symDifference_read.normalize();
             assertTrue("Returned symDifference should be equal to the given multipolygon", symDifference_read.equalsExact(symDifference));
@@ -1068,7 +1068,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePolygon.class, "id == :id");
             query.setResult("geom.difference(Spatial.geomFromText('POLYGON((75 75,100 75,100 80,80 80,75 75))', 4326))");
             query.setUnique(true);
-            Geometry difference_read = (Geometry) query.execute(new Long(getSamplePolygon(2).getId()));
+            Geometry difference_read = (Geometry) query.execute(Long.valueOf(getSamplePolygon(2).getId()));
             difference.normalize();
             difference_read.normalize();
             assertTrue("Returned difference should be equal to the given polygon", difference_read.equalsExact(difference));
@@ -1086,7 +1086,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Double x = new Double(75.0);
+            Double x = Double.valueOf(75.0);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.getX() == :x");
             List list = (List) query.execute(x);
             assertEquals("Wrong number of geometries with a given x = " + x + " returned", 1, list.size());
@@ -1096,7 +1096,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getX()");
             query.setResultClass(Double.class);
             query.setUnique(true);
-            Double x_read = (Double) query.execute(new Long(getSamplePoint(2).getId()));
+            Double x_read = (Double) query.execute(Long.valueOf(getSamplePoint(2).getId()));
             assertEquals("Returned x should be equal to the given value", x, x_read);
         }
         finally
@@ -1112,7 +1112,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Double y = new Double(10.0);
+            Double y = Double.valueOf(10.0);
             Query query = pm.newQuery(SamplePoint.class, "geom != null && geom.getY() == :y");
             List list = (List) query.execute(y);
             assertEquals("Wrong number of geometries with a given y = " + y + " returned", 1, list.size());
@@ -1122,7 +1122,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getY()");
             query.setResultClass(Double.class);
             query.setUnique(true);
-            Double y_read = (Double) query.execute(new Long(getSamplePoint(1).getId()));
+            Double y_read = (Double) query.execute(Long.valueOf(getSamplePoint(1).getId()));
             assertEquals("Returned y should be equal to the given value", y, y_read);
         }
         finally
@@ -1147,7 +1147,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SampleLineString.class, "id == :id");
             query.setResult("geom.getStartPoint()");
             query.setUnique(true);
-            Geometry point_read = (Geometry) query.execute(new Long(getSampleLineString(2).getId()));
+            Geometry point_read = (Geometry) query.execute(Long.valueOf(getSampleLineString(2).getId()));
             point.normalize();
             point_read.normalize();
             assertTrue("Returned start point should be equal to the given point", point_read.equalsExact(point));
@@ -1174,7 +1174,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SampleLineString.class, "id == :id");
             query.setResult("geom.getEndPoint()");
             query.setUnique(true);
-            Geometry point_read = (Geometry) query.execute(new Long(getSampleLineString(3).getId()));
+            Geometry point_read = (Geometry) query.execute(Long.valueOf(getSampleLineString(3).getId()));
             point.normalize();
             point_read.normalize();
             assertTrue("Returned end point should be equal to the given point", point_read.equalsExact(point));
@@ -1201,7 +1201,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.isRing()");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean isRing = (Boolean) query.execute(new Long(getSampleLineString(3).getId()));
+            Boolean isRing = (Boolean) query.execute(Long.valueOf(getSampleLineString(3).getId()));
             assertEquals("LineString 3 should not be a ring", false, isRing.booleanValue());
         }
         finally
@@ -1225,7 +1225,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.isClosed()");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean isClosed = (Boolean) query.execute(new Long(getSampleLineString(3).getId()));
+            Boolean isClosed = (Boolean) query.execute(Long.valueOf(getSampleLineString(3).getId()));
             assertEquals("LineString 3 should not be closed", false, isClosed.booleanValue());
         }
         finally
@@ -1241,7 +1241,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Double length = new Double(100.0);
+            Double length = Double.valueOf(100.0);
             Query query = pm.newQuery(SampleLineString.class, "geom != null && geom.getLength() == :length");
             List list = (List) query.execute(length);
             assertEquals("Wrong number of geometries with length " + length + " returned", 2, list.size());
@@ -1252,7 +1252,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getLength()");
             query.setResultClass(Double.class);
             query.setUnique(true);
-            Double length_read = (Double) query.execute(new Long(getSampleLineString(1).getId()));
+            Double length_read = (Double) query.execute(Long.valueOf(getSampleLineString(1).getId()));
             assertEquals("Returned length should be equal to the given value", length, length_read);
         }
         finally
@@ -1268,7 +1268,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Integer num = new Integer(2);
+            Integer num = Integer.valueOf(2);
             Query query = pm.newQuery(SampleLineString.class, "geom != null && geom.getNumPoints() == :num");
             List list = (List) query.execute(num);
             assertEquals("Wrong number of geometries with " + num + " points returned", 2, list.size());
@@ -1279,7 +1279,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getNumPoints()");
             query.setResultClass(Integer.class);
             query.setUnique(true);
-            Integer num_read = (Integer) query.execute(new Long(getSampleLineString(1).getId()));
+            Integer num_read = (Integer) query.execute(Long.valueOf(getSampleLineString(1).getId()));
             assertEquals("Returned number of points should be equal to the given value", num, num_read);
         }
         finally
@@ -1296,7 +1296,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         {
             tx.begin();
             Point point = (Point) wktReader.read("POINT(110 10)");
-            Short n = new Short((short) 3);
+            Short n = Short.valueOf((short) 3);
             Query query = pm.newQuery(SampleLineString.class, "geom != null && geom.getPointN(:n).toText() == Spatial.asText(:point)");
             List list = (List) query.execute(n, point);
             assertEquals("Wrong number of geometries whose point no. " + n + " equals a given point returned", 1, list.size());
@@ -1306,7 +1306,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SampleLineString.class, "id == :id");
             query.setResult("geom.getPointN(3)");
             query.setUnique(true);
-            Geometry point_read = (Geometry) query.execute(new Long(getSampleLineString(3).getId()));
+            Geometry point_read = (Geometry) query.execute(Long.valueOf(getSampleLineString(3).getId()));
             point.normalize();
             point_read.normalize();
             assertTrue("Returned third point should be equal to the given point", point_read.equalsExact(point));
@@ -1324,7 +1324,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Double area = new Double(2400.0);
+            Double area = Double.valueOf(2400.0);
             Query query = pm.newQuery(SamplePolygon.class, "geom != null && geom.getArea() == :area");
             List list = (List) query.execute(area);
             assertEquals("Wrong number of geometries with an area of " + area + " returned", 1, list.size());
@@ -1334,7 +1334,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getArea()");
             query.setResultClass(Double.class);
             query.setUnique(true);
-            Double area_read = (Double) query.execute(new Long(getSamplePolygon(1).getId()));
+            Double area_read = (Double) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Returned length should be equal to the given value", area, area_read);
         }
         finally
@@ -1360,7 +1360,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePolygon.class, "id == :id");
             query.setResult("geom.getCentroid()");
             query.setUnique(true);
-            Geometry centroid_read = (Geometry) query.execute(new Long(getSamplePolygon(1).getId()));
+            Geometry centroid_read = (Geometry) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertTrue("Given point shoul be centroid of Polygon 1", centroid_read.equalsExact(centroid));
         }
         finally
@@ -1386,7 +1386,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePolygon.class, "id == :id");
             query.setResult("geom.getPointOnSurface()");
             query.setUnique(true);
-            Geometry pointOnSurface = (Geometry) query.execute(new Long(getSamplePolygon(1).getId()));
+            Geometry pointOnSurface = (Geometry) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertNotNull("Polygon 1 should have a point on the surface", pointOnSurface);
             assertEquals("Polygon 1 should have a point on the surface", "POINT", pointOnSurface.getGeometryType().toUpperCase());
         }
@@ -1412,7 +1412,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePolygon.class, "id == :id");
             query.setResult("geom.getExteriorRing()");
             query.setUnique(true);
-            Geometry exteriorRing_read = (Geometry) query.execute(new Long(getSamplePolygon(1).getId()));
+            Geometry exteriorRing_read = (Geometry) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             exteriorRing.normalize();
             exteriorRing_read.normalize();
             assertTrue("Exterior ring of Polygon 1 should be equal to the given linestring", exteriorRing_read.equalsExact(exteriorRing));
@@ -1430,7 +1430,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Integer num = new Integer(1);
+            Integer num = Integer.valueOf(1);
             Query query = pm.newQuery(SamplePolygon.class, "geom != null && geom.getNumInteriorRing() == :num");
             List list = (List) query.execute(num);
             assertEquals("Wrong number of geometries with " + num + " interior rings returned", 1, list.size());
@@ -1440,7 +1440,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getNumInteriorRing()");
             query.setResultClass(Integer.class);
             query.setUnique(true);
-            Integer num_read = (Integer) query.execute(new Long(getSamplePolygon(1).getId()));
+            Integer num_read = (Integer) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             assertEquals("Polygon 1 should have one interior ring", num, num_read);
         }
         finally
@@ -1456,7 +1456,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Short n = new Short((short) 1);
+            Short n = Short.valueOf((short) 1);
             LineString interiorRing = (LineString) wktReader.read("LINESTRING(45 45,55 45,55 55,45 55,45 45)");
             Query query = pm.newQuery(SamplePolygon.class, "geom != null && geom.getInteriorRingN(:n).toText() == Spatial.asText(:interiorRing)");
             List list = (List) query.execute(n, interiorRing);
@@ -1468,7 +1468,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SamplePolygon.class, "id == :id");
             query.setResult("geom.getInteriorRingN(1)");
             query.setUnique(true);
-            Geometry interiorRing_read = (Geometry) query.execute(new Long(getSamplePolygon(1).getId()));
+            Geometry interiorRing_read = (Geometry) query.execute(Long.valueOf(getSamplePolygon(1).getId()));
             interiorRing.normalize();
             interiorRing_read.normalize();
             assertTrue("First interior ring of Polygon 1 should be equal to the given linestring", interiorRing_read.equalsExact(interiorRing));
@@ -1486,7 +1486,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Integer num = new Integer(3);
+            Integer num = Integer.valueOf(3);
             Query query = pm.newQuery(SampleGeometryCollection.class, "geom != null && geom.getNumGeometries() == :num");
             List list = (List) query.execute(num);
             assertEquals("Wrong number of collections with " + num + " geometries returned", 2, list.size());
@@ -1499,7 +1499,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("geom.getNumGeometries()");
             query.setResultClass(Integer.class);
             query.setUnique(true);
-            Integer num_read = (Integer) query.execute(new Long(getSampleGeometryCollection(1).getId()));
+            Integer num_read = (Integer) query.execute(Long.valueOf(getSampleGeometryCollection(1).getId()));
             assertEquals("Collection 1 should have three geometries", num, num_read);
         }
         finally
@@ -1515,7 +1515,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
         try
         {
             tx.begin();
-            Short n = new Short((short) 2);
+            Short n = Short.valueOf((short) 2);
             LineString lineString = (LineString) wktReader.read("LINESTRING(50 0,50 100)");
             Query query = pm.newQuery(SampleGeometryCollection.class, "geom != null && geom.getGeometryN(:n).toText() == Spatial.asText(:lineString)");
             List list = (List) query.execute(n, lineString);
@@ -1526,7 +1526,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query = pm.newQuery(SampleGeometryCollection.class, "id == :id");
             query.setResult("geom.getGeometryN(2)");
             query.setUnique(true);
-            Geometry lineString_read = (Geometry) query.execute(new Long(getSampleGeometryCollection(2).getId()));
+            Geometry lineString_read = (Geometry) query.execute(Long.valueOf(getSampleGeometryCollection(2).getId()));
             lineString.normalize();
             lineString_read.normalize();
             assertTrue("Second geometry of Collection 2 should be equal to the given linestring", lineString_read.equalsExact(lineString));
@@ -1556,7 +1556,7 @@ public class JtsGeometrySpatialTest extends JDOPersistenceTestCase
             query.setResult("Spatial.bboxTest(Spatial.geomFromText('POINT(90 90)', 4326), geom)");
             query.setResultClass(Boolean.class);
             query.setUnique(true);
-            Boolean equals = (Boolean) query.execute(new Long(getSamplePolygon(2).getId()));
+            Boolean equals = (Boolean) query.execute(Long.valueOf(getSamplePolygon(2).getId()));
             assertEquals("Polygon 2 should pass bbox test with the given point", true, equals.booleanValue());
         }
         finally
