@@ -122,9 +122,9 @@ public class FloatWidget extends Widget
         super.fillRandom();
 
         floatField = nextFloat();
-        floatObjField = nextNull() ? null : new Float(nextFloat());
+        floatObjField = nextNull() ? null : Float.valueOf(nextFloat());
         doubleField = nextDouble();
-        doubleObjField = nextNull() ? null : new Double(nextDouble());
+        doubleObjField = nextNull() ? null : Double.valueOf(nextDouble());
     }
 
 
