@@ -90,7 +90,7 @@ public class SchemaColumnTest extends JDOPersistenceTestCase
                 ClassWithDefaultCols c1 = pm.getObjectById(ClassWithDefaultCols.class, 1);
                 assertNull(c1.getDefaultedNameNull());
                 assertEquals("Name 1", c1.getDefaultedName());
-                assertEquals(new Long(3), c1.getDefaultedLong());
+                assertEquals(Long.valueOf(3), c1.getDefaultedLong());
 
                 tx.commit();
             }
