@@ -268,7 +268,7 @@ public class StoredProcedureTest extends JDOPersistenceTestCase
                 assertFalse("Flag for result set returned true but should have been false", hasRS);
 
                 Object paramVal = spq.getOutputParameterValue("PARAM1");
-                assertEquals("Output parameter is incorrect", new Integer(count.intValue()), paramVal);
+                assertEquals("Output parameter is incorrect", Integer.valueOf(count.intValue()), paramVal);
 
                 tx.commit();
             }
@@ -392,7 +392,7 @@ public class StoredProcedureTest extends JDOPersistenceTestCase
                 assertFalse("Flag for result set returned true but should have been false", hasRS);
 
                 Object paramVal = spq.getOutputParameterValue("PARAM2");
-                assertEquals("Output parameter is incorrect", new Integer(count.intValue()), paramVal);
+                assertEquals("Output parameter is incorrect", Integer.valueOf(count.intValue()), paramVal);
 
                 tx.commit();
             }
